[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/Enemy-Dart-Soldier.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/Enemy-NERF-Gun-Sprite.png" type="Texture" id=4]
[ext_resource path="res://assets/sound-effects/ShotSound2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound-effects/ReloadSound.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 133.391

[node name="Enemy" instance=ExtResource( 1 )]
scale = Vector2( 0.992098, 1.00641 )
collision_layer = 2147483652
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="Gun" parent="." index="2"]
texture = ExtResource( 4 )

[node name="ShotCooldown" type="Timer" parent="." index="3"]
wait_time = 2.0
autostart = true

[node name="AttackRange" type="Area2D" parent="." index="4"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
visible = false
shape = SubResource( 1 )

[node name="ReloadTimer" parent="." index="5"]
wait_time = 1.0

[node name="ShootSound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 5 )

[node name="ReloadSound" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 6 )
[connection signal="timeout" from="ShotCooldown" to="." method="_on_ShotCooldown_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
